istio-07-egress-gw/create_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: sandbox
