istio-07-egress-gw/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-webapl5
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: webapl5
