istio-07-egress-gw/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-webapl5-through-egress-gateway
spec:
  hosts:
  - webapl5.default.k8s2.labo.local
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: webapl5
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: webapl5.default.k8s2.labo.local
        port:
          number: 80
      weight: 100
